<resources>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="app_name">打球晩成</string>
    <string name="action_settings">Settings</string>
    <string name="title_menu">menu</string>
    <string name="title_login">Login</string>
    <string name="title_new_registration">New Registration</string>
    <string name="title_to_login">To Login</string>
    <string name="title_to_new_registration">To New Registration</string>
    <string name="title_email_address">E-mail Address</string>
    <string name="title_first_name">First Name</string>
    <string name="title_last_name">Last Name</string>
    <string name="title_password">Password</string>
    <string name="title_setting">Setting</string>
    <string name="title_score_registration">Score Registration</string>
    <string name="title_counting">Counting</string>
    <string name="title_history">History</string>
    <string name="title_course_registration">Course Registration</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_member_change">Member Change</string>
    <string name="text_party_registration">Party Registration</string>
    <string name="text_competition_registration">Competition Registration</string>
    <string name="text_bet_registration"> Bet Registration </string>
    <string name="text_course_name">Course Name</string>
    <string name="text_bet_setting">Bet Setting</string>
    <string name="jap_updating_profile">Updating profile…</string>
    <string name="jap_profile_updated">Profile updated.</string>
    <string name="jap_profile_update_failed">Update failed. Please try again.</string>
    <string name="jap_loading_courses_players">Loading courses and players…</string>
    <string name="jap_loading_complete">Loading complete.</string>
    <string name="jap_something_wrong">Something went wrong. Please try again.</string>
    <string name="jap_reg_success">Registration successful.</string>
    <string name="jap_reg_failed">Registration failed. Please try again.</string>
    <string name="jap_registering">Registering…</string>
    <string name="jap_enter_email">Please enter your email.</string>
    <string name="jap_enter_firstname">Please enter your first name.</string>
    <string name="jap_enter_pass">Please enter your password.</string>
    <string name="jap_updating_competition">Updating competition…</string>
    <string name="jap_competition_updated">Competition updated.</string>
    <string name="jap_enter_competition_name">Enter a competition name</string>
    <string name="jap_enter_valid_date">Please enter a valid date.</string>
    <string name="jap_creating_competition">Creating competition…</string>
    <string name="jap_competition_created">Competition created.</string>
    <string name="jap_invalid_login">Invalid email/password.</string>
    <string name="jap_login_success">Login successful.</string>
    <string name="jap_logging_in">Logging in…</string>
    <string name="text_hole">Hole</string>
    <string name="text_fellow_competitors_name">Fellow Competitors Name</string>
    <string name="text_register">Register</string>
    <string name="text_play_history_score">Score</string>
    <string name="text_play_history_score_gross">Gross</string>
    <string name="text_play_history_score_net">Net</string>
    <string name="text_save">Save</string>
    <string name="save">Save</string>
    <string name="competition_registration">Competition Registration</string>
    <string name="fellow_competitor_name">Fellow Competitor\'s Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="text_next">Next</string>
    <string name="text_set">Set</string>
    <string name="text_help">Help</string>
    <string name="course_name">Course Name</string>
    <string name="holes">Holes</string>
    <string name="handicap">Handicap</string>
    <string name="par">Par</string>
    <string name="delete">Delete</string>
    <string name="course_info">Course Info</string>
    <string name="view_courses">View Courses</string>
    <string name="Edit">Edit</string>
    <string name="view_closed_competition">View Closed Competition</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="view">View</string>
    <string name="jap_closed_competition">Closed Competition</string>
    <string name="jap_competition_name">Competition Name</string>
    <string name="jap_course">Course</string>
    <string name="view_groups">View Groups</string>
    <string name="bet_setting_reference">Bet Setting/Reference</string>
    <string name="score_counting">Score Counting</string>
    <string name="return_text">Return</string>
    <string name="text_play_history">Play History</string>
    <string name="create_courses">Create Courses</string>
    <string name="view_closed_competitions">View Closed Competitions</string>
    <string name="join">Join</string>
    <string name="jap_edit_closed_competition">Edit Closed Competition</string>
    <string name="update">Update</string>
    <string name="create_competition">Create Competition</string>
    <string name="create">Create</string>
    <string name="competition_counting">Competition Counting</string>
    <string name="bet_counting">Bet Counting</string>
    <string name="course_registration">Course Registration</string>
    <string name="search_group">Search Group</string>
    <string name="show_my_group_only">Show My Group Only</string>
    <string-array name="group">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>
    <string name="logout">Logout</string>
    <string name="jap_party_name">Party Name</string>
    <string name="jap_party_created">Party created.</string>
    <string name="jap_party_date">Party Date</string>
    <string name="jap_creating_party">Creating party…</string>
    <string name="jap_enter_party_name">Enter a party name.</string>
    <string name="jap_add_member">Add Member</string>
    <string name="jap_competition">Competition</string>
    <string name="jap_edit_group">Edit Group</string>
    <string name="jap_bet_type">Bet Type</string>
    <string name="jap_loading_parties">Loading parties…</string>
    <string name="jap_loading_competition_info">Loading competition information…</string>
    <string name="jap_loading_competition_groups">Loading competition groups…</string>
    <string name="jap_loading_scores">Loading scores…</string>
    <string name="jap_email_registered">Email already registered.</string>
    <string name="not_entered">Not Entered</string>
    <string name="confirming">Confirming</string>
    <string name="view_competition">View Competition</string>
    <string name="join_competition">Join Competition</string>
    <string name="create_group">Create Group</string>
    <string name="view_group">View Groups</string>
    <string name="course_created">Course Created</string>
    <string name="something_went_wrong">Something went Wrong</string>
    <string name="create_course_name">Create Course Name</string>
    <string name="up_to_18_holes">Up to 18 holes</string>
    <string name="loading_courses">Loading Courses</string>
    <string name="courses_loaded">Courses Loaded</string>
    <string name="loading_course_info">Loading Course Info</string>
    <string name="deleting_course">Deleting Course</string>
    <string name="course_deleted">Course Deleted</string>
    <string name="information_loaded">Information Loaded</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="sure">Sure</string>
    <string name="type_bet">Type of Bet</string>
    <string name="prev">Prev</string>
    <string name="tx_score_registration">Score Registration</string>
    <string name="tx_party_play_scoring">Party Play Scoring</string>
    <string name="tx_competition_scoring">Competition Scoring</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="active">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="jap_option">Action</string>
    <string name="jap_okay">Okay</string>
    <string name="jap_select_group">Select Group</string>
    <string name="jap_getting_groups">Getting groups</string>
    <string name="jap_getting_members">Getting members</string>
    <string name="jap_getting_bets">Getting bets</string>
    <string name="jap_saving_bets">Saving bets</string>
    <string name="jap_saving_scores">Saving scores</string>
    <string name="jap_party_list">Party List</string>
    <string name="jap_getting_holes">Getting Holes</string>
    <string name="jap_invalid_email">Invalid Email Address</string>
    <string name="members">Members</string>
    <string name="jap_not_entered">Not Entered</string>
    <string name="cannot_choose_more_than_three">Cannot Choose more that 3 settings</string>
    <string name="jap_no_bets">No bets</string>
    <string name="jap_group_name">Group Name</string>
    <string name="jap_edit">Edit</string>
    <string name="jap_deleting_party">Deleting Party…</string>
    <string name="jap_party_deleted">Party Deleted.</string>
    <string name="dummy_text_name" translatable="false">1st Name</string>
    <string name="dummy_text_xx" translatable="false">XX</string>
    <string name="dummy_text_yy" translatable="false">YY</string>
</resources>