<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_registration_main"
    android:padding="5dp">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/itemPlayHistoryScoreName"
        android:textSize="24sp"
        android:text="@string/dummy_text_name"
        android:textColor="@android:color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemPlayHistoryScoreName"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginLeft="5dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/text_play_history_score_gross"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/itemPlayHistoryScoreGross"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/dummy_text_xx"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/text_play_history_score_net"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/itemPlayHistoryScoreNet"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/dummy_text_yy"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        </LinearLayout>


</RelativeLayout>
