<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/container_background"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/party_container"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name" />

            <EditText
                android:id="@+id/et_competition_edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:background="@drawable/container_background_3"
                android:textSize="14sp"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:id="@+id/course_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_below="@id/party_container">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/jap_competition" />

            <TextView
                android:id="@+id/tv_competition_edit_group_close_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_competition_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal">

            <ImageView
                android:id="@+id/add_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_input_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jap_add_member" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/horizontal_line"
            android:padding="1dp"
            android:stretchColumns="0,2,4">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:background="#999">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:maxLines="1"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/name" />

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent">

                    <View style="@style/Divider" />
                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:maxLines="1"
                    android:gravity="center_horizontal"
                    android:text="@string/title_email_address" />

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent">

                    <View style="@style/Divider" />
                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="center_horizontal"
                    android:maxLines="1"
                    android:text="@string/delete" />
            </TableRow>


        </TableLayout>

        <ListView
            android:id="@+id/lv_competition_edit_group_addmember"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:isScrollContainer="false" />

        <Button
            android:id="@+id/b_competition_edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/update" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_alignTop="@+id/relativeLayout1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="-10dp"
        android:background="#fff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/black"
        android:text="@string/jap_edit_group"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>