<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_registration_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/container_background">

        <TextView
            android:layout_width="130dp"
            android:id="@+id/tvPlayHistory"
            android:layout_alignParentTop="true"
            android:text="@string/text_play_history"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="17dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@drawable/square_title"
            android:gravity="center"
            android:layout_height="60dp" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lvPlayHistory"
            android:focusable="true"
            android:layout_below="@+id/tvPlayHistory"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/title_menu"
        android:textAllCaps="false"
        android:id="@+id/menu_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ff313131"
        android:layout_marginTop="20dp"
        android:elegantTextHeight="false"
        android:enabled="true"
        android:textStyle="normal"
        android:singleLine="true"
        android:textSize="27sp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:id="@+id/logout_button"
        android:background="#ff313131"
        android:elegantTextHeight="false"
        android:enabled="true"
        android:textStyle="normal"
        android:singleLine="true"
        android:textSize="22sp"
        android:layout_marginBottom="49dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/dd"
        android:layout_alignStart="@+id/dd" />

</RelativeLayout>
